# autoresearch-unsloth

./: .gitignore  README.md  pyproject.toml
autoresearch-skills/: train.py
autoresearch_skills/: __init__.py  dashboard.py  prepare.py  program.md  train.py
autoresearch_skills/tests/: test_suite.py
autoresearch_unsloth/: README.md  plot_progress.py  prepare_unsloth.py  program_unsloth.md  train_unsloth.py
