[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous pretraining research swarm with Unsloth as the training framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kernels>=0.11.7",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "torch==2.9.1",
    "google-genai",
    "anthropic",
    "python-dotenv",
]

[project.optional-dependencies]
unsloth = [
    "unsloth",
    "trl>=0.16.0",
    "datasets>=3.0.0",
    "peft>=0.14.0",
    "transformers>=4.51.0",
    "accelerate>=1.0.0",
    "huggingface_hub>=0.27.0",
    "bitsandbytes>=0.45.0",
    "pytest",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
